tests/matrices/invalid/invalid_bad_banner_2.mtx
%%Matrix Market matrix coordinate real general
% invalid banner
4 4 0
